<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KodeKompis</string>
    <string name="action_settings">Settings</string>
    
    <!-- START_REGULAR (CODEPANEL) -->
    <string name="codepanel_header">Tast inn PIN-kode</string>
    <!-- END START_REGULAR (CODEPANEL) -->
    <string name="datalist_empty">
        Takk for at du bruker KodeKompis!\n\n
        Her vil du se en liste over dine brukernavn og passord så snart som du har lagt til noen.\n\n
        Kom i gang ved å trykke på \'+\'-symbolet oppe til høyre.
    </string>
    <!-- DATALIST -->
    
    <!-- END DATALIST -->
    
    <!-- DATABOLK TUTORIAL DEFAULT -->
    <string name="databolk_default_sted">KodeKompis Eksempel</string>
    <string name="databolk_default_user">Dette er mitt brukernavn</string>
    <string name="databolk_default_pass">Og dette er mitt passord</string>
    <!-- END DATABOLK TUTORIAL DEFAULT -->
    
    <!-- DATABOLK MODELL -->
    <string name="sted_hint">URL/SYSTEM</string>
    <string name="bruker_hint">> Brukernavn</string>
    <string name="passord_hint">> Passord</string>
    <!-- END DATABOLK MODELL -->
    
    <!-- MENU -->
	<string name="legg_til">Legg til</string>
	<string name="sort">Sorter</string>
	<!-- END MENU -->
	
	<!-- LIST CONTEXTMENU -->
	<string name="list_contextmenu_copy_user">Kopier brukernavn</string>
	<string name="list_contextmenu_copy_pass">Kopier passord</string>
	<string name="list_contextmenu_edit">Rediger</string>
	<string name="list_contextmenu_delete">Slett</string>
	
	<!-- &#160; is nonbreaking space, to avoid trimming of space in beginning/end of string -->
	<string name="list_contextmenu_toast_copy_user">Brukernavn&#160;</string>
	<string name="list_contextmenu_toast_copy_pass">Passord&#160;</string>
	<string name="list_contextmenu_toast_copy_end">&#160;kopiert til utklippstavle</string>
	<string name="list_contextmenu_toast_delete_beg">Element&#160;</string>
	<string name="list_contextmenu_toast_delete_end">&#160;slettet</string>
	<!-- END LIST CONTEXTMENU -->
	
	<!-- DIALOG -->
	<string name="dialog_header">Legg til i liste</string>
	<string name="dialog_header_edit">Endre element i liste</string>
	<string name="dialog_sted_valg">Beskrivelse:</string>
	<string name="dialog_sted_hint">Fyll inn</string>
	<string name="dialog_bruker_valg">Brukernavn/epost:</string>
	<string name="dialog_bruker_hint">Fyll inn</string>
	<string name="dialog_passord_valg">Passord:</string>
	<string name="dialog_pass_hint">Fyll inn</string>
	<string name="dialog_text_avbryt">AVBRYT</string>
	<string name="dialog_text_legg_til">LAGRE</string>
	<string name="dialog_text_submit_edit">LAGRE</string>
	<!-- END DIALOG -->
	
	<!-- DELETE DIALOG -->
	<string name="dialog_delete_title">Slett element</string>
	<string name="dialog_delete_message">Er du sikker på at du vil slette dette elementet fra listen?</string>
	<string name="dialog_delete_cancel">AVBRYT</string>
	<string name="dialog_delete_confirm">SLETT</string>
	
	
	<!-- END DELETE DIALOG -->
	
	<!-- START FIRST (WELCOME SLIDER) -->
	<string name="welcome_button_prev">Forrige</string>
	<string name="welcome_button_redo">Start på nytt</string>
	<string name="welcome_button_next">Neste</string>
	<string name="welcome_button_confirm">Bekreft</string>
	<string name="welcomestring1">Velkommen til KodeKompis!</string>
	<string name="welcomestring2">KodeKompis er en applikasjon som hjelper deg med å holde kontroll på dine brukernavn og passord, beskyttet av en PIN-kode som du selv velger.\n\nAlle brukernavn og passord som du skriver inn blir lagret på denne enheten gjennom sikker kryptering, og kan kun leses ut i klartekst ved å bruke riktig PIN-kode ved innlogging.</string>
	<string name="welcomestring3">På neste skjerm vil du bli spurt om å velge din PIN-kode (4 siffer) for tilgang til dine brukernavn og passord, tast samme kode to ganger etter hverandre for å bekrefte valg av kode.\n\nTips:\nVelg en kode som du vil huske; om du glemmer koden vil du ikke ha noen muligheter til å hente ut informasjonen du har lagret, og gjentatte feilede innloggingsforsøk vil straffes med økende lengde utelåsning.\nHusk at dine brukerdata ikke blir tryggere enn ditt eget valg av PIN-kode, helst unngå valg som "1234" eller "0000".</string>
	<string name="welcome_enterfirst">Velg din PIN-kode</string>
	<string name="welcome_entersecond">Gjenta samme PIN-kode</string>
	<string name="welcome_finish">Bekreft valg, eller start på nytt</string>
	<!-- END START FIRST (WELCOME SLIDER) -->
	
	<!-- START FAILED (COUNTDOWNTIMER)-->
	<string name="startfailed_message">
	    Du ser denne skjermen fordi for mange feilede innloggingsforsøk har blitt registrert.\n\n
	    Innlogging vil være utilgjengelig inntil utelåsningsperioden vist nedenfor har utløpt.\n\n
	    Dersom du avbryter nedtellingen ved å lukke applikasjonen eller bruk av tilbakeknappen
	    vil den begynne på nytt ved neste oppstart.
	    </string>
	<string name="startfailed_waitfinished">Ferdig.\nGår tilbake til innlogging.</string>
	
	<!-- START FAILED (COUNTDOWNTIMER) -->
	
</resources>
