<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_dataBolk"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp" 
    android:orientation="vertical"  >
	
    
    <TextView
        android:text="@string/dialog_header"
        android:textColor="@color/eb_white"
        android:textStyle="bold" 
        android:textSize="30sp"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView
	        android:text="@string/dialog_sted_valg"
	        android:textColor="@color/eb_white"
	        android:textStyle="bold" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" />
	    
	    <EditText 
	        android:id="@+id/dialog_input_sted"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/dialog_sted_hint"
	        />
        
    </LinearLayout>
    
      
</LinearLayout>