<!-- fragment_welcome_page2.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical" 
    >
	<ScrollView
	    android:id="@+id/content"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
	    android:background="@color/main_background_color" >
	
	    <TextView style="?android:textAppearanceMedium"
	        android:padding="16dp"
	        android:lineSpacingMultiplier="1.2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/eb_white"
	        android:text="@string/welcomestring2" />
	</ScrollView>
	
	<!-- PREVIOUS / NEXT BUTTONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        >
        
        <!-- android:src="@drawable/buttonsource" -->
        <Button
	        android:id="@+id/buttonPrevious"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:text="@string/welcome_button_prev"
	        />
        <Button
	        android:id="@+id/buttonNext"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:text="@string/welcome_button_next"
	        />
    </LinearLayout>
    <!-- END PREVIOUS / NEXT BUTTONS -->
</LinearLayout>