<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:weightSum="8"
	android:background="@color/main_background_color"
	>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background_color"
        >
        <TextView 
            android:id="@+id/dataBolk_sted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/eb_white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/sted_hint"
            android:padding="5dp"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/liste_bolk_sub"
        android:layout_margin="2dp"
        android:orientation="vertical"
        >
        <TextView 
            android:id="@+id/dataBolk_bruker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_background_color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/bruker_hint"
            android:padding="3dp"
            />
        
        <TextView 
            android:id="@+id/dataBolk_passord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_background_color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/passord_hint"
            android:padding="3dp"
            />
    </LinearLayout>
    
</LinearLayout>